# benchmarks

io_benchmarks/: CMakeLists.txt
io_benchmarks/benchmarks/: bench_io_uring.cpp  bench_mmap.cpp
io_benchmarks/scripts/: generate_file.sh  install_deps.sh  run_io_uring_mmap.sh
